--- a/index.html
+++ b/index.html
@@ -1,10 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Landing Page</title>
-    </head>
-    <body>
-        <h1>This is landing Page</h1>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=1920px, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>odin Landing Page</title>
+  </head>
+  <body>
+    <header>
+      <div class="header-container">
+        <div class="header-logo">Header Logo</div>
+        <nav>
+          <ul>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <section class="hero">
+      <div class="hero-container">
+        <div class="hero-left">
+          <h1>This website is awesome</h1>
+          <p class="hero-sentence">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast
+          </p>
+          <button class="hero-button">Sign up</button>
+        </div>
+        <div class="hero-right">
+          <img
+            src=""
+            alt="this is placeholder for an image"
+            class="hero-image"
+          />
+        </div>
+      </div>
+    </section>
+
+    <main>
+      <h2>Some random information.</h2>
+      <div class="box-container">
+        <div class="box">
+          <img src="" alt="" class="box-image" />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="box">
+          <img src="" alt="" class="box-image" />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="box">
+          <img src="" alt="" class="box-image" />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="box">
+          <img src="" alt="" class="box-image" />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+      </div>
+    </main>
+
+    <section class="quote">
+      <div class="quote-container">
+        <p class="quote-sentence">
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actually reat it. Who
+          knows? All i know is that it looks nice.
+        </p>
+        <p class="quote-signature">-Thor, God of Thunder</p>
+      </div>
+    </section>
+
+    <section class="modal">
+      <div class="modal-left">
+        <h3>Call to action! It's time!</h3>
+        <p class="modal-sentence">
+          Sign up for our product by clicking that button right over there!
+        </p>
+      </div>
+      <div class="modal-right">
+        <button class="modal-button">Sign up</button>
+      </div>
+    </section>
+
+    <footer>
+      <p class="footer-sentence">Copyright &copy; satorki@github 2024</p>
+    </footer>
+  </body>
 </html>
